# openbanking-server-rust

./: .env  .env.example  .gitignore  Cargo.toml  watch_project.sh
migrations/2019-09-30-103031_create_users/: up.sql
src/: errors.rs  main.rs  routes.rs
src/db/: mod.rs  models.rs  schema.rs
src/mail/: mod.rs
src/yapily/: mod.rs
