[package]
name = "sumi-backend"
version = "0.1.0"
authors = ["Alan Flood <alanwflood.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
r2d2 = "0.8"
dotenv = "0.10"
