[package]
name = "sumi"
version = "0.1.0"
authors = ["Alan Flood <alanwflood.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.1"
actix-web = "1.0"
argonautica = "0.2"
chrono = "0.4"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.10"
env_logger = "0.7"
listenfd = "0.3"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
