[package]
name = "sumi"
version = "0.1.0"
authors = ["Alan Flood <alanwflood.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-redis = "0.7"
actix-session = "0.2.0"
actix-web = { version = "1.0", features = ["ssl"] }
argonautica = "0.2"
base64 = "0.10"
chrono = { version = "0.4",  features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.10"
env_logger = "0.7"
futures = "0.1"
jsonapi = "0.6.4"
lazy_static = "1.4"
listenfd = "0.3"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
